# LightGBMJni

./: CMakeLists.txt  README.md  pom.xml
src/main/java/: Booster.java  DatesetHandle.java  ILightGBMJava.java  Test.java
src/main/native/: lightgbmJava.cpp
src/main/native/include/: ILightGBMJava.h  handle.h
